clusters/cl01tl/manifests/gatus/HTTPRoute-http-route-gatus.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-route-gatus
  namespace: gatus
  labels:
    app.kubernetes.io/name: http-route-gatus
    app.kubernetes.io/instance: gatus
    app.kubernetes.io/part-of: gatus
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: traefik-gateway
      namespace: traefik
  hostnames:
    - gatus.alexlebens.net
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ''
          kind: Service
          name: gatus
          port: 80
          weight: 100
